--- a/.github/workflows/blauhaus.yml
+++ b/.github/workflows/blauhaus.yml
@@ -16,12 +16,12 @@ jobs:
         node ./scripts/getversion.js
      - name: Build NuGet Package
        run: |
-        dotnet build ./src/Blauhaus.MVVM.sln --configuration Release
-        dotnet pack ./src/Blauhaus.MVVM.Abstractions/Blauhaus.MVVM.Abstractions.csproj -p:PackageVersion=${VERSION_NAME} --no-build --output ./ --configuration Release 
-        dotnet pack ./src/Blauhaus.MVVM.TestHelpers/Blauhaus.MVVM.TestHelpers.csproj -p:PackageVersion=${VERSION_NAME} --no-build --output ./ --configuration Release 
-        dotnet pack ./src/Blauhaus.MVVM.Xamarin/Blauhaus.MVVM.Xamarin.csproj -p:PackageVersion=${VERSION_NAME} --no-build --output ./ --configuration Release 
+        dotnet build ./src/Blauhaus.Reactive.sln --configuration Release
+        dotnet pack ./src/Blauhaus.Reactive.Abstractions/Blauhaus.Reactive.Abstractions.csproj -p:PackageVersion=${VERSION_NAME} --no-build --output ./ --configuration Release 
+        dotnet pack ./src/Blauhaus.Reactive.TestHelpers/Blauhaus.Reactive.TestHelpers.csproj -p:PackageVersion=${VERSION_NAME} --no-build --output ./ --configuration Release 
+        dotnet pack ./src/Blauhaus.Reactive/Blauhaus.Reactive.csproj -p:PackageVersion=${VERSION_NAME} --no-build --output ./ --configuration Release 
      - name: Deploy NuGet Package
        run:  |
-        dotnet nuget push /home/runner/work/Blauhaus.MVVM/Blauhaus.MVVM/Blauhaus.MVVM.Abstractions.${VERSION_NAME}.nupkg -k ${{ secrets.NUGET_API_KEY }} -s https://api.nuget.org/v3/index.json
-        dotnet nuget push /home/runner/work/Blauhaus.MVVM/Blauhaus.MVVM/Blauhaus.MVVM.TestHelpers.${VERSION_NAME}.nupkg -k ${{ secrets.NUGET_API_KEY }} -s https://api.nuget.org/v3/index.json
-        dotnet nuget push /home/runner/work/Blauhaus.MVVM/Blauhaus.MVVM/Blauhaus.MVVM.Xamarin.${VERSION_NAME}.nupkg -k ${{ secrets.NUGET_API_KEY }} -s https://api.nuget.org/v3/index.json
+        dotnet nuget push /home/runner/work/Blauhaus.Reactive/Blauhaus.Reactive/Blauhaus.Reactive.Abstractions.${VERSION_NAME}.nupkg -k ${{ secrets.NUGET_API_KEY }} -s https://api.nuget.org/v3/index.json
+        dotnet nuget push /home/runner/work/Blauhaus.Reactive/Blauhaus.Reactive/Blauhaus.Reactive.TestHelpers.${VERSION_NAME}.nupkg -k ${{ secrets.NUGET_API_KEY }} -s https://api.nuget.org/v3/index.json
+        dotnet nuget push /home/runner/work/Blauhaus.Reactive/Blauhaus.Reactive/Blauhaus.Reactive.${VERSION_NAME}.nupkg -k ${{ secrets.NUGET_API_KEY }} -s https://api.nuget.org/v3/index.json
